--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Home
 	</div>
 	
 	<div class="right">
-		<h1>Glen P. Martin</h1>
-		<h2> Lecturer in Health Data Science, University of Manchester</h2>
+		<h1 style="float:right;font-size:.7em">Glen P. Martin</h1>
+		<h2 style="font-size:.7em;width:160px;float:left;"> Lecturer in Health Data Science, University of Manchester</h2>
 		
 		<ul>
 			<li> <a href="https://github.com/GlenMartin31">Github page</a> </li>
