--- a/index.html
+++ b/index.html
@@ -6,17 +6,9 @@ title: Home
 	<div class="left">
 		<img src="img/profilepic.jpg" class='iconDetails'>
 	</div>
-	
 	<div class="right">
-		<h1 style="float:right;font-size:.7em">Glen P. Martin</h1>
-		<h2 style="font-size:.7em;width:160px;float:left;"> Lecturer in Health Data Science, University of Manchester</h2>
-		
-		<ul>
-			<li> <a href="https://github.com/GlenMartin31">Github page</a> </li>
-			<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
-			<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
-			<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
-		</ul>
+		<h1>Glen P. Martin</h1>
+		<h2> Lecturer in Health Data Science, University of Manchester</h2>
 	</div>
 </div>
 
@@ -31,5 +23,11 @@ title: Home
 	<a href="http://dx.doi.org/10.1136/heartjnl-2017-312489">(details here)</a>. I am particularly interested in the statistical methodology that underpins these models to improve the 
 	ways in which they are developed (and tested) ready for clinical use.</p>
 
+	<ul>
+		<li><a href="https://github.com/GlenMartin31">Github page</a> </li>
+		<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
+		<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
+		<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
+	</ul>
 	
 </div>
