--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@ title: Home
 	<div class="right">
 		<h1>Glen P. Martin</h1>
 		<h2> Lecturer in Health Data Science, University of Manchester</h2>
+		<p> I'm a Lecturer in Health Data Science in the <a href="https://www.herc.ac.uk/">Centre for Health Informatics</a> at 
+		the <a href="https://www.manchester.ac.uk/">University of Manchester</a>.</p>
+		<p> I am a statitician with research interests in the field of prognostic modelling. This is an exciting area of research that aims to use 
+		mathematical models to predict the risk of certain (health) outcomes or events in individuals based on a set of characteristics about them (e.g. their age and gender). 
+		I have particular interests in cardiovascular disease and surgery, and have developed a prognostic model to predict the risk of dealth following a heart valve operation
+		<a href="http://dx.doi.org/10.1136/heartjnl-2017-312489">(details here)</a>. I am particularly interested in the statistical methodology that underpins these models to improve the 
+		ways in which they are developed (and tested) ready for clinical use.</p>
 	</div>
 </div>
 
 <div class="body">
-	<h2>Biography</h2>
-	<p> I'm a Lecturer in Health Data Science in the <a href="https://www.herc.ac.uk/">Centre for Health Informatics</a> at 
-	the <a href="https://www.manchester.ac.uk/">University of Manchester</a>.</p>
-
-	<p> I am a statitician with research interests in the field of prognostic modelling. This is an exciting area of research that aims to use 
-	mathematical models to predict the risk of certain (health) outcomes or events in individuals based on a set of characteristics about them (e.g. their age and gender). 
-	I have particular interests in cardiovascular disease and surgery, and have developed a prognostic model to predict the risk of dealth following a heart valve operation
-	<a href="http://dx.doi.org/10.1136/heartjnl-2017-312489">(details here)</a>. I am particularly interested in the statistical methodology that underpins these models to improve the 
-	ways in which they are developed (and tested) ready for clinical use.</p>
-
+	<h2>Projects</h2>
+	<p>A list of my current projects can be found <li><a href="/projects">here</a></li> </p>
+	<h2>Additional Links</h2>
 	<ul>
 		<li><a href="https://github.com/GlenMartin31">Github page</a> </li>
 		<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
 		<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
 		<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
 	</ul>
-	
 </div>
