--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
 
 <div class="body">
 	<h2>Projects</h2>
-	<p>A list of my current projects can be found <li><a href="/projects">here</a></li> </p>
+	<p>A list of my current projects can be found <a href="/projects">here</a> </p>
 	<h2>Additional Links</h2>
 	<ul>
 		<li><a href="https://github.com/GlenMartin31">Github page</a> </li>
