--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@ title: Home
 <div class='container2'>
 	<div class="left">
 		<img src="img/profilepic.jpg" class='iconDetails'>
-	</div>
-	<div class="right">
 		<h1>Glen P. Martin</h1>
 		<h2> Lecturer in Health Data Science, University of Manchester</h2>
+		<ul style="list-style-type:none;">
+			<li><a href="https://github.com/GlenMartin31">Github page</a> </li>
+			<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
+			<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
+			<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
+		</ul>
+	</div>
+	<div class="right">
+		
 		<p> I'm a Lecturer in Health Data Science in the <a href="https://www.herc.ac.uk/">Centre for Health Informatics</a> at 
 		the <a href="https://www.manchester.ac.uk/">University of Manchester</a>.</p>
 		<p> I am a statitician with research interests in the field of prognostic modelling. This is an exciting area of research that aims to use 
@@ -20,13 +27,8 @@ title: Home
 </div>
 
 <div class="body">
+	<h2>Research Interests</h2>
 	<h2>Projects</h2>
 	<p>A list of my current projects can be found <a href="/projects">here</a> </p>
-	<h2>Additional Links</h2>
-	<ul>
-		<li><a href="https://github.com/GlenMartin31">Github page</a> </li>
-		<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
-		<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
-		<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
-	</ul>
+		
 </div>
