--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@ title: Home
 ---
 <div class='container2'>
 	<div class="left">
-		<img src="img/profilepic.jpg" class='iconDetails'>
-		<h1>Glen P. Martin</h1>
-		<h2> Lecturer in Health Data Science, University of Manchester</h2>
-		<ul style="list-style-type:none;">
-			<li><a href="https://github.com/GlenMartin31">Github page</a> </li>
-			<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
-			<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
-			<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
-		</ul>
+		<div class="img-with-text">
+			<img src="img/profilepic.jpg" class='iconDetails'>
+			<h1>Glen P. Martin</h1>
+			<h2> Lecturer in Health Data Science, University of Manchester</h2>
+			<ul style="list-style-type:none;">
+				<li><a href="https://github.com/GlenMartin31">Github page</a> </li>
+				<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
+				<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
+				<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
+			</ul>
+		</div>
 	</div>
 	<div class="right">
 		
