--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ title: Home
 <div class='container2'>
 	<div class="left">
 		<div class="img-with-text">
-			<img src="img/profilepic.jpg" class='iconDetails'>
-			<h1>Glen P. Martin</h1>
-			<h2> Lecturer in Health Data Science, University of Manchester</h2>
+			<img src="img/profilepic.jpg" margin-left="2%" float="left"	border-radius="50%">
+			<h2>Glen P. Martin</h2>
+			<p> Lecturer in Health Data Science</p>
+			<p>University of Manchester</p>
 			<ul style="list-style-type:none;">
 				<li><a href="https://github.com/GlenMartin31">Github page</a> </li>
 				<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
