--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Home
 	<div class="left">
 		<div class="img-with-text">
 			<img src="img/profilepic.jpg" margin-left="2%" float="left"	border-radius="50%">
-			<h2>Glen P. Martin</h2>
-			<p> Lecturer in Health Data Science</p>
-			<p>University of Manchester</p>
+			<h2 text-align="center">Glen P. Martin</h2>
+			<p text-align="center"> Lecturer in Health Data Science</p>
+			<p text-align="center">University of Manchester</p>
 			<ul style="list-style-type:none;">
 				<li><a href="https://github.com/GlenMartin31">Github page</a> </li>
 				<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
