--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <div class='container2'>
 	<div class="left">
 		<div class="img-with-text">
-			<img src="img/profilepic.jpg" margin-left="2%" float="left"	border-radius="50%">
+			<img src="img/profilepic.jpg">
 			<h2 text-align="center">Glen P. Martin</h2>
 			<p text-align="center"> Lecturer in Health Data Science</p>
 			<p text-align="center">University of Manchester</p>
