--- a/index.html
+++ b/index.html
@@ -4,34 +4,38 @@ title: Home
 ---
 <div class='container2'>
 	<div class="left">
-		<div class="img-with-text">
-			<img src="img/profilepic.jpg">
-			<h2 text-align="center">Glen P. Martin</h2>
+		<img src="img/profilepic.jpg">
+	</div>
+	<div class="right">
+		<h2 text-align="center">Glen P. Martin</h2>
 			<p text-align="center"> Lecturer in Health Data Science</p>
 			<p text-align="center">University of Manchester</p>
-			<ul style="list-style-type:none;">
-				<li><a href="https://github.com/GlenMartin31">Github page</a> </li>
+			
+		<p> I'm a Lecturer in Health Data Science in the <a href="https://www.herc.ac.uk/">Centre for Health Informatics</a> at 
+		the <a href="https://www.manchester.ac.uk/">University of Manchester</a>. My main research interests focus on the field of prognostic modelling 
+		(a.k.a risk prediction modelling). This is an exciting area of research that aims to use mathematical models to predict the risk of certain (health) 
+		outcomes occuring for individuals based on a set of characteristics about them (e.g. their age and gender). My work focusses on developing methodology to 
+		help improve the ways in which risk prediction models are developed (and tested/validated) for clinical use.</p>
+		
+		<p>This website contains a collection of my work, such as selected publications, a description of main <a href="/projects">projects</a>, that I lead on, 
+		and a collection of <a href="/posts">posts</a> that aim to summarise my papers, or discuss topics of interest to me (and hopefully you too). 
+		More details can be found at the following:		
+		<ul style="list-style-type:none;">
+				<li><a href="https://github.com/GlenMartin31">Github</a> </li>
 				<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
 				<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
 				<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
-			</ul>
-		</div>
-	</div>
-	<div class="right">
-		
-		<p> I'm a Lecturer in Health Data Science in the <a href="https://www.herc.ac.uk/">Centre for Health Informatics</a> at 
-		the <a href="https://www.manchester.ac.uk/">University of Manchester</a>.</p>
-		<p> I am a statitician with research interests in the field of prognostic modelling. This is an exciting area of research that aims to use 
-		mathematical models to predict the risk of certain (health) outcomes or events in individuals based on a set of characteristics about them (e.g. their age and gender). 
-		I have particular interests in cardiovascular disease and surgery, and have developed a prognostic model to predict the risk of dealth following a heart valve operation
-		<a href="http://dx.doi.org/10.1136/heartjnl-2017-312489">(details here)</a>. I am particularly interested in the statistical methodology that underpins these models to improve the 
-		ways in which they are developed (and tested) ready for clinical use.</p>
+		</ul>
 	</div>
 </div>
 
 <div class="body">
 	<h2>Research Interests</h2>
-	<h2>Projects</h2>
-	<p>A list of my current projects can be found <a href="/projects">here</a> </p>
+	<p>My research focusses on risk prediction modelling. Here, the idea is to use data to build mathematical models that take a set of relevant characteristics or features
+	as inputs and output a risk or probability of some event happening in the future. For example, there are models to predict (or forecast) what the weather is going to do tomorrow. 
+	Here, the models have been developed (or trained) based on current understandings of different meteorological phenomenon and using historical data. As a health data scientist, 
+	my research focusses on health contexts, but the same general idea applies: we can use historical health data to relate the experiences of past patients to aim to make predictions about risk of 
+	likely outcomes in future patients. Such risk models can be used to support clinical decision-making. Clearly, this means that any such risk models should be robustly developed and
+	tested, which is where my research focusses: improving the methodology that are used to develop (and test) the risk models.</p>
 		
 </div>
