--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <div class='container2'>
 	<div class="left">
-		<img src="img/profilepic.jpg">
+		<img alt="Picture of Glen Martin" src="img/profilepic.jpg">
 	</div>
 	<div class="right">
 		<h2 text-align="center">Glen P. Martin</h2>
