Update adaptive screen

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: default
 title: Home
 ---
-<div class='container2'>
-	<div class="left">
-		<img alt="Picture of Glen Martin" src="img/profilepic.jpg">
-	</div>
-	<div class="right">
-		<h2 text-align="center">Glen P. Martin</h2>
+<div class="row">
+  <div class="column" style="background-color:#aaa;">
+    <img alt="Picture of Glen Martin" src="img/profilepic.jpg">
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2 text-align="center">Glen P. Martin</h2>
 			<p text-align="center"> Lecturer in Health Data Science</p>
 			<p text-align="center">University of Manchester</p>
 			
@@ -26,7 +26,7 @@ title: Home
 				<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
 				<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
 		</ul>
-	</div>
+  </div>
 </div>
 
 <div class="body">
