--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 layout: default
 title: Home
 ---
+<div class="body">
+
 <div class="row">
-  <div class="column" style="background-color:#aaa;">
+  <div class="column">
     <img alt="Picture of Glen Martin" src="img/profilepic.jpg">
   </div>
-  <div class="column" style="background-color:#bbb;">
+  <div class="column">
     <h2 text-align="center">Glen P. Martin</h2>
 			<p text-align="center"> Lecturer in Health Data Science</p>
 			<p text-align="center">University of Manchester</p>
@@ -29,13 +31,12 @@ title: Home
   </div>
 </div>
 
-<div class="body">
-	<h2>Research Interests</h2>
-	<p>My research focusses on risk prediction modelling. Here, the idea is to use data to build mathematical models that take a set of relevant characteristics or features
-	as inputs and output a risk or probability of some event happening in the future. For example, there are models to predict (or forecast) what the weather is going to do tomorrow. 
-	Here, the models have been developed (or trained) based on current understandings of different meteorological phenomenon and using historical data. As a health data scientist, 
-	my research focusses on health contexts, but the same general idea applies: we can use historical health data to relate the experiences of past patients to aim to make predictions about risk of 
-	likely outcomes in future patients. Such risk models can be used to support clinical decision-making. Clearly, this means that any such risk models should be robustly developed and
-	tested, which is where my research focusses: improving the methodology that are used to develop (and test) the risk models.</p>
-		
+<h2>Research Interests</h2>
+<p>My research focusses on risk prediction modelling. Here, the idea is to use data to build mathematical models that take a set of relevant characteristics or features
+as inputs and output a risk or probability of some event happening in the future. For example, there are models to predict (or forecast) what the weather is going to do tomorrow. 
+Here, the models have been developed (or trained) based on current understandings of different meteorological phenomenon and using historical data. As a health data scientist, 
+my research focusses on health contexts, but the same general idea applies: we can use historical health data to relate the experiences of past patients to aim to make predictions about risk of 
+likely outcomes in future patients. Such risk models can be used to support clinical decision-making. Clearly, this means that any such risk models should be robustly developed and
+tested, which is where my research focusses: improving the methodology that are used to develop (and test) the risk models.</p>
+
 </div>
