--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@ layout: default
 title: Home
 ---
 <div class="body">
-
 <div class="row">
   <div class="column">
     <img alt="Picture of Glen Martin" src="img/profilepic.jpg">
@@ -15,28 +14,24 @@ title: Home
 			
 	<p> I'm a Lecturer in Health Data Science in the <a href="https://www.herc.ac.uk/">Centre for Health Informatics</a> at 
 	the <a href="https://www.manchester.ac.uk/">University of Manchester</a>. My main research interests focus on the field of prognostic modelling 
-	(a.k.a risk prediction modelling). This is an exciting area of research that aims to use mathematical models to predict the risk of certain (health) 
-	outcomes occuring for individuals based on a set of characteristics about them (e.g. their age and gender). My work focusses on developing methodology to 
-	help improve the ways in which risk prediction models are developed (and tested/validated) for clinical use.</p>
+	(risk prediction modelling). This is an exciting area of research that aims to use data to build mathematical models that take a set of relevant 
+	characteristics or features as inputs and output a risk or probability of some event happening in the future. For example, there are models to predict 
+	(or forecast) what the weather is likely to do tomorrow. Here, the models have been developed (or trained) based on current understandings of different 
+	meteorological phenomenon and using historical data.</p>
+	<p>Now, as a health data scientist, my research focusses on health contexts, but the same general idea applies: we can use historical health data to 
+	develop models that aim to make predictions about risk of likely outcomes in future patients based on a set of characteristics (e.g. their age and 
+	gender). Such risk models can be used to support clinical decision-making. Clearly, this means that any such risk models should be robustly developed 
+	and tested, which is where my research focusses: improving the methodology that are used to develop (and test) the risk models.</p>
 	
-	<p>This website contains a collection of my work, such as selected publications, a description of main <a href="/projects">projects</a>, that I lead on, 
-	and a collection of <a href="/posts">posts</a> that aim to summarise my papers, or discuss topics of interest to me (and hopefully you too). 
-	More details can be found at the following:		
+	<p>This website contains a collection of my work, such as selected <a href="/publications">publications</a>, a description of main <a href="/projects">projects</a>, that I lead on, 
+	and a collection of <a href="/posts">posts</a> that aim to summarise my papers or discuss topics of interest to me (and hopefully you too). 
+	More details can be found at the following:	</p>	
 	<ul style="list-style-type:none;">
-			<li><a href="https://github.com/GlenMartin31">Github</a> </li>
-			<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
-			<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
-			<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
+		<li><a href="https://github.com/GlenMartin31">Github</a> </li>
+		<li><a href="https://twitter.com/glen_martin1?lang=en">Twitter</a></li>
+		<li><a href="https://www.research.manchester.ac.uk/portal/glen.martin.html">Univeristy Webpage</a></li>
+		<li><a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">Google Scholar</a></li>
 	</ul>
   </div>
 </div>
-
-<h2>Research Interests</h2>
-<p>My research focusses on risk prediction modelling. Here, the idea is to use data to build mathematical models that take a set of relevant characteristics or features
-as inputs and output a risk or probability of some event happening in the future. For example, there are models to predict (or forecast) what the weather is going to do tomorrow. 
-Here, the models have been developed (or trained) based on current understandings of different meteorological phenomenon and using historical data. As a health data scientist, 
-my research focusses on health contexts, but the same general idea applies: we can use historical health data to relate the experiences of past patients to aim to make predictions about risk of 
-likely outcomes in future patients. Such risk models can be used to support clinical decision-making. Clearly, this means that any such risk models should be robustly developed and
-tested, which is where my research focusses: improving the methodology that are used to develop (and test) the risk models.</p>
-
 </div>
