--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ title: Home
     <img alt="Picture of Glen Martin" src="img/profilepic.jpg">
   </div>
   <div class="column">
-    <h2 text-align="center">Glen P. Martin</h2>
-	<p text-align="center"> Lecturer in Health Data Science</p>
+    <h2 text-align="center">Dr Glen P. Martin, PhD</h2>
 	<p text-align="center">University of Manchester</p>
 			
 	<p> I'm a Lecturer in Health Data Science in the <a href="https://www.herc.ac.uk/">Centre for Health Informatics</a> at 
@@ -21,9 +20,9 @@ title: Home
 	<p>Now, as a health data scientist, my research focusses on health contexts, but the same general idea applies: we can use historical health data to 
 	develop models that aim to make predictions about risk of likely outcomes in future patients based on a set of characteristics (e.g. their age and 
 	gender). Such risk models can be used to support clinical decision-making. Clearly, this means that any such risk models should be robustly developed 
-	and tested, which is where my research focusses: improving the methodology that are used to develop (and test) the risk models.</p>
+	and tested, which is where my research focus is centred: to improve the methodologies that are used to develop (and test) risk models.</p>
 	
-	<p>This website contains a collection of my work, such as selected <a href="/publications">publications</a>, a description of main <a href="/projects">projects</a>, that I lead on, 
+	<p>This website contains a collection of my work, such as selected <a href="/publications">publications</a>, a description of my main <a href="/projects">projects</a>, 
 	and a collection of <a href="/posts">posts</a> that aim to summarise my papers or discuss topics of interest to me (and hopefully you too). 
 	More details can be found at the following:	</p>	
 	<ul style="list-style-type:none;">
