--- a/publications/index.html
+++ b/publications/index.html
@@ -5,6 +5,71 @@ title: Publications
 
 <div class="body">
 <h2>Selected Publications</h2>
-<p>Here is a list of some recent (select) publications. A full list of my publications is avaliable <a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">here</a>.</P>
+<p>Here is a list of some of my selected publications. A full list of my publications is avaliable <a href="https://scholar.google.co.uk/citations?user=-9-SxiMAAAAJ&hl=en">here</a>.</P>
+
+<h3> 2020 </h3>
+<ul>
+	<li>Riley, R.D., Ensor, J., Snell, K.I.E., Harrell, F.E., Martin, G.P., Reitsma, J.B., Moons, K.G.M., Collins, G., Smeden, M.V. Calculating the sample size required for developing a 
+		clinical prediction model. BMJ. (2020). DOI: https://doi.org/10.1136/bmj.m441 </li>
+		
+	<li>Martin, G.P., Sperrin, M., Snell, K.I.E., Buchan, I., Riley, R.D. Clinical Prediction Models to Predict the Risk of Multiple Binary Outcomes: a comparison of approaches. 
+		arXiv (2020): https://arxiv.org/abs/2001.07624 </li>
+	
+	<li>Martin, G.P., Jenkins, D., Bull, L., Sisk, R., Lin, L., Hulme, W., Wilson, A., Wang, W., Barrowman, M., Sammut-Powell, C., Pate, A., Sperrin, M., Peek, N. Towards a 
+		Framework for the Design, Implementation and Reporting of Methodology Scoping Reviews. Journal of Clinical Epidemiology (2020). DOI: https://doi.org/10.1016/j.jclinepi.2020.07.014 </li>
+		
+	<li>Mistry, C., Palin, V., Li, Y., Martin, G.P., Jenkins, D., Welfare, W., Ashcroft, D.M., van Staa, T. Development and Validation of a Multivariable Prediction Model for infection-related 
+		complications in patients with common infections in UK primary care and the extent of risk-based prescribing of antibiotics. BMC Medicine. (2020). DOI: https://doi.org/10.1186/s12916-020-01581-2 </li>
+		
+	<li>Bull, L.M., Lunt, M., Martin, G.P., Hyrich, K., Sergeant, J.C. Harnessing repeated measurements of predictor variables for clinical risk prediction: A review of existing methods. BMC Diagnostic and 
+		Prognostic Research. (2020). DOI: https://doi.org/10.1186/s41512-020-00078-z </li>
+		
+	<li>Sperrin, M., Martin G.P. Multiple Imputation with Missing Indicators as Proxies for Unmeasured Variables: simulation study. BMC Medical Research Methodology (2020). 
+		DOI: https://doi.org/10.1186/s12874-020-01068-x </li>
+</ul>
+
+<h3> 2019 </h3>
+<ul>
+	<li>Martin, G.P., Kwok, C.S., Van Spall, H.G.C., Volgman, A.S., Michos, E.D., Parwani, P., Alraies, M.C., Thamman, R., Kontopantelis, E., Mamas, M.A. Readmission and Processes of Care across 
+		Weekend and Weekday Hospitalisation for Acute Myocardial Infarction, Heart Failure or Stroke: an observational study of the National Readmission Database. BMJ Open (2019). 
+		DOI: 10.1136/bmjopen-2019-029667 </li>
+		
+	<li>Martin, G.P., McDonald, K.R., Allsop, D., Diggle, P.J., Leroi, I., Apathy as a behavioural marker of cognitive impairment in Parkinson’s disease: A longitudinal analysis. 
+		Journal of Neurology (2019). DOI: https://doi.org/10.1007/s00415-019-09538-z </li>
+		
+	<li>Sperrin, M., Jenkins, D., Martin, G.P., Peek, N. Explicit causal reasoning is needed to prevent prognostic models being victims of their own success. Journal of the 
+		American Medical Informatics Association (2019) DOI: https://doi.org/10.1093/jamia/ocz197 </li>
+		
+	<li>Li, Y., Sperrin, M., Martin, G.P., Ashcroft, D., Van Staa, T.P. Examining the impact of data quality and completeness of electronic health records on predictions of patients’ 
+		risks of cardiovascular disease. International Journal of Medical Informatics (2019) DOI: https://doi.org/10.1016/j.ijmedinf.2019.104033 </li>
+</ul>
+
+<h3> 2018 </h3>
+<ul>
+	<li>Martin, G.P., Sperrin, M, Ludman, P.F., de Belder, M.A., Gunning, M., Townend, J., Redwood, S.R., Kadam, U.T., Buchan, I., Mamas, M.A. Do frailty measures improve prediction of mortality 
+		and morbidity following transcatheter aortic valve implantation? An analysis of the UK TAVI registry. BMJ Open. (2018). DOI: 10.1136/bmjopen-2018-022543 </li>
+	
+	<li>Martin, G.P., Sperrin, M., Mamas, M.A. Pre-procedural risk models for patients undergoing transcatheter aortic valve implantation. Journal of Thoracic Disease. (2018). DOI: 10.21037/jtd.2018.05.67 </li>
+	
+	<li>Sperrin, M., Martin, G.P., Pate, A., Van Staa, T., Peek, N., Buchan, I. Using marginal structural models to adjust for treatment drop-in when developing clinical prediction models. 
+		Statistics in Medicine. (2018). DOI: 10.1002/sim.7913 </li>
+	
+	<li>Jenkins, D.A., Sperrin, M., Martin, G.P., Peek, N. Dynamic models to predict health outcomes: Current status and methodological challenges. BMC Diagnostic and Prognostic Research (2018). 
+		DOI: https://doi.org/10.1186/s41512-018-0045-2 </li>
+</ul>
+
+<h3> 2017 </h3>
+<ul>
+	<li>Martin, G.P., Sperrin, M., Ludman, P.F., de Belder, M.A., Gale, C.P., Toff, W.D., Moat, N.E., Trivedi, U., Buchan, I., Mamas, M.A. Inadequacy of Existing Clinical Prediction Models for 
+	    Predicting Mortality after Transcatheter Aortic Valve Implantation. American Heart Journal. (2017) DOI: 10.1016/j.ahj.2016.10.020 </li>
+		
+	<li>Martin, G.P., Sperrin, M., Ludman, P.F., de Belder, M.A., Redwood, S.R., Townend, J.N., Gunning, M., Moat, N.E., Banning, A.P., Buchan, I., Mamas, M.A. Novel United Kingdom prognostic 
+		model for 30-day mortality following transcatheter aortic valve implantation. Heart. (2017). DOI: 10.1136/heartjnl-2017-312489 </li>
+	
+	<li>Martin, G.P., Mamas, M.A., Peek, N., Buchan, I., Sperrin, M. Clinical Prediction in Defined Populations: a simulation study investigating when and how to aggregate existing models. 
+		BMC Med Res Methodol. (2017) DOI: 10.1186/s12874-016-0277-1 </li>
+		
+	<li>Martin, G.P., Mamas, M.A., Peek, N., Buchan, I., Sperrin, M., A Multiple-Model Generalisation of Updating Clinical Prediction Models. Stats in Medicine. (2017). DOI: 10.1002/sim.7586 </li>
+</ul>
 
 </div>
