--- a/projects/index.html
+++ b/projects/index.html
@@ -3,4 +3,11 @@ layout: default
 title: Projects
 ---
 
-Placeholder
+This page summarises some of the main projects that I lead. 
+
+<h2>Towards Appraoches for Multi-Outcome Risk Prediction </h2>
+<h3>2020 - 2023 </h3>
+This project is funded by an MRC-NIHR Methodology Research Panel award, and seeks to investigate and develop statistical methodology for developing and validating clinical prediction models (CPMs) 
+for predicting multiple outcomes simultaneously. CPMs are models or algorithms which take a collection of a patients characteristics (e.g age, blood pressure, family disease history) and produces an 
+output of the likelihood of an event happening, for example the risk of developing type 2 diabetes. The majority of CPMs available are only designed to calculate a patients risk for one particular disease. 
+This project aims to model a whole patient pathway and predict the likelihood of someone developing multiple outcomes simultaneously, using one CPM.  
