--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@ title: Projects
 
 This page summarises some of the main projects that I lead. 
 
-<h2>Towards Appraoches for Multi-Outcome Risk Prediction </h2>
+<h2>Towards Approaches for Multi-Outcome Risk Prediction </h2>
 <h3>2020 - 2023 </h3>
 This project is funded by an MRC-NIHR Methodology Research Panel award, and seeks to investigate and develop statistical methodology for developing and validating clinical prediction models (CPMs) 
 for predicting multiple outcomes simultaneously. CPMs are models or algorithms which take a collection of a patients characteristics (e.g age, blood pressure, family disease history) and produces an 
